2006-10-21  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/article_sweeper.rb 
	(ArticleSweeper::expire_for): Split following methods.
	(ArticleSweeper::ep_trigger_title_a): New method.
	(ArticleSweeper::ep_atom): New method.
	(ArticleSweeper::ep_category): New method.
	(ArticleSweeper::ep_articles_long): New method.
	(ArticleSweeper::ep_author): New method.
	(ArticleSweeper::ep_notes): New method.

	* donrails/app/models/article.rb (Article::renew_mtime): Fix: When article_date is not setted, this method set it.

	* donrails/app/views/login/manage_don_rbl.rhtml: Cleanup.

	* donrails/app/controllers/login_controller.rb (LoginController::manage_don_rbl): Cleanup.

	* donrails/app/views/shared/edit_don_rbl.rhtml (rbl_type): Change to use <select>.

	* donrails/app/controllers/notes_controller.rb (NotesController::add_comment2): Fix to show article which has not enrollment_id.

2006-10-20  Akira TAGOH  <at@gclab.org>

	* donrails/app/views/layouts/MT/notes.rhtml: reflects author and
	author's email address from DB's.

	* donrails/app/views/layouts/default/notes.rhtml: likewise.

2006-10-19  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/ping.rb (Ping::send_ping_xmlrpc_extended): Fix rdf url.

	* donrails/app/views/login/manage_category.rhtml: Fix description.

	* donrails/app/controllers/login_controller.rb (LoginController::add_don_env): Fix to add unuse column.
	(LoginController::add_don_rbl): Fix.

	** Incompatible Change ::
	(1) Before upgrade from r91 and before, you have to prepare 'don_envs' and 'don_rbls' TABLE. Please see 'donrails/tool/tables-{postgresql,mysql,sqlite}.sql'. 
	(2) After that, Please go '/login/manage_don_env' and './login/manage_don_rbl'. Then please input your configration like 'donrails_env.rb'.
	
	* donrails/app/helpers/application_helper.rb 
	(ApplicationHelper::don_get_oldconfig): New method (it splitted from don_get_config) for backward compatibility. 
	(ApplicationHelper::don_get_config): likewise.

	* r94