@@ -1,5 +1,8 @@
 2006-10-21  ARAKI Yasuhiro  <yasu@debian.or.jp>
 
+	* donrails/config/routes.rb: Change URL /notes/ to /archives/. 
+	* donrails/app/models/article_sweeper.rb: likewise.
+	
 	* donrails/app/models/article_sweeper.rb 
 	(ArticleSweeper::expire_for): Split following methods.
 	(ArticleSweeper::ep_trigger_title_a): New method.
